fix spacing

--- a/src/app/components/ui/profile/index.css
+++ b/src/app/components/ui/profile/index.css
@@ -2,6 +2,6 @@
 
 @layer base {
     .profile {
-        @apply w-full;
+        @apply w-full px-6;
     }
 }
